--- a/.github/workflows/dev-docker-image.yaml
+++ b/.github/workflows/dev-docker-image.yaml
@@ -13,6 +13,6 @@ jobs:
        - uses: elgohr/Publish-Docker-Github-Action@2.12
          name: Build and Push Docker Image
          with:
-           name: micro/platform
+           name: micro/services
            username: ${{ secrets.DOCKER_USERNAME }}
            password: ${{ secrets.DOCKER_PASSWORD }}
