--- a/.github/workflows/dev-docker-image.yaml
+++ b/.github/workflows/dev-docker-image.yaml
@@ -10,9 +10,22 @@ jobs:
      steps:
        - uses: actions/checkout@v2
          name: Check out repository
+       - uses: actions/checkout@v1
+       - id: file_changes
+         uses: trilom/file-changes-action@v1
+         with:
+           githubToken: ${{ secrets.GH_TOKEN }}
+       - name: Build Started Webhook
+         run: |
+           cat $HOME/files.json
+           curl https://micro.mu/platform/v1/github/build-started -X POST -d @$HOME/files.json -H "Content-Type: application/json"
        - uses: elgohr/Publish-Docker-Github-Action@2.12
          name: Build and Push Docker Image
          with:
            name: micro/services
            username: ${{ secrets.DOCKER_USERNAME }}
            password: ${{ secrets.DOCKER_PASSWORD }}
+       - name: Build Finished Webhook
+         run: |
+           cat $HOME/files.json
+           curl https://micro.mu/platform/v1/github/build-finished -X POST -d @$HOME/files.json -H "Content-Type: application/json"
