--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
             cd $dir
             echo Building $dir
             (CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" . && mv ./${dir::-1} ~/builds/${dir::-1} || true)
+            upx ~/builds/${dir::-1}
             cd ..
           done
         fi
@@ -80,13 +81,13 @@ jobs:
     - name: Build and Push Docker Image
       run: |
          ls -ll ~/builds
-         docker build ~/builds -f Dockerfile -t micro/services:${GITHUB_REF##*/}
-         docker push micro/services:${GITHUB_REF##*/}   
+         docker build ~/builds -f Dockerfile -t micro/services
+         docker push micro/services
     - name: Build Finished Webhook
       run: |
          curl https://micro.mu/platform/v1/github/build-finished -X POST -d @$HOME/files.json -H "Content-Type: application/json"
-#     - name: Compress new binaries
-#       run: |        
-#         for dir in */; do
-#           if grep $dir $HOME/files.json; then upx ~/builds/${dir::-1}; fi
-#         done
+    - name: Compress new binaries
+      run: |        
+        for dir in */; do
+          if grep $dir $HOME/files.json; then upx ~/builds/${dir::-1}; fi
+        done
