--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Build
 
 on: 
   push:
-    branches:
-    - master
 
 jobs:
   build:
@@ -73,16 +71,13 @@ jobs:
           mv dumb-init ~/builds/dumb-init
           cd ..
         fi
-    - uses: azure/docker-login@v1
-      name: Authenticate docker
-      with:
-         username: ${{ secrets.DOCKER_USERNAME }}
-         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build and Push Docker Image
       run: |
-         ls -ll ~/builds
-         docker build ~/builds -f Dockerfile -t micro/services
-         docker push micro/services
+        tag=docker.pkg.github.com/${{ github.repository }}/${GITHUB_REF##*/}
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} --password-stdin docker.pkg.github.com
+        docker build ~/builds -f Dockerfile -t $tag
+        docker push $tag
+        rm /home/runner/.docker/config.json # Delete credentials
     - name: Build Finished Webhook
       run: |
          curl https://micro.mu/platform/v1/github/build-finished -X POST -d @$HOME/files.json -H "Content-Type: application/json"
