Update GitHub Action (#28)
* Update GitHub Action

* Add build back to event.sh

* Test

* Test

* Update micro/actions to v1.1.0

* Test modifying a service

* Test deleting a service

* Test adding a new service

* Fix relative path build bug

* Add test service

* Fix Dockerfile path

* Update URL to Prod

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,44 +7,45 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Detect which services changed
-      id: services_changed
-      uses: micro/actions@1.0.0
-      with:
-        githubToken: ${{ secrets.GITHUB_TOKEN }}
-    - name: Check out repository
-      uses: actions/checkout@v2
-    - name: Build Started Webhook
-      run: |
-        ./event.sh "build.started" "${GITHUB_RUN_ID}" "${GITHUB_SHA}" "${GITHUB_REPOSITORY}"
-    - name: Install Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-    - name: Setup go-mod cache
-      uses: actions/cache@v1
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-gomods-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-gomods-
-    - name: Setup dumb init
-      run: |
-        git clone https://github.com/Yelp/dumb-init.git
-        cd dumb-init
-        make build
-        cd ..
-    - name: Build and push docker images
-      run: |          
-        # Login to docker
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} --password-stdin docker.pkg.github.com
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: Detect which services changed
+        id: services_changed
+        uses: micro/actions@1.1.0
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Started Webhook
+        run: |
+          ./event.sh "build.started" "${GITHUB_RUN_ID}"
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+      - name: Setup go-mod cache
+        uses: actions/cache@v1
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-gomods-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-gomods-
+      - name: Setup dumb init
+        run: |
+          git clone https://github.com/Yelp/dumb-init.git
+          cd dumb-init
+          make build
+          cd ..
+      - name: Build and push docker images
+        run: |          
+          # Login to docker
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} --password-stdin docker.pkg.github.com
 
-        # Build the binaries in the directories which have changed
-        ./build.sh "${{ steps.services_changed.outputs.services }}"
-    - name: Build Finished Webhook
-      run: |
-        ./event.sh "build.finished" "${GITHUB_RUN_ID}" "${GITHUB_SHA}" "${GITHUB_REPOSITORY}"
-    - name: Build Failed Webhook
-      if: failure()
-      run: |
-        ./event.sh "build.failed" "${GITHUB_RUN_ID}" "${GITHUB_SHA}" "${GITHUB_REPOSITORY}"
+          # Build the binaries in the directories which have changed
+          ./build.sh "${{ steps.services_changed.outputs.services_added }}"
+          ./build.sh "${{ steps.services_changed.outputs.services_modified }}"
+      - name: Build Finished Webhook
+        run: |
+          ./event.sh "build.finished" "${GITHUB_RUN_ID}"
+      - name: Build Failed Webhook
+        if: failure()
+        run: |
+          ./event.sh "build.failed" "${GITHUB_RUN_ID}"
