--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: Build
 
 on: 
   push:
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -9,12 +12,23 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+      - name: Set up conditional variables
+        id: vars
+        # This is a hack to support the conditional if in the next step
+        # see https://github.community/t5/GitHub-Actions/If-expression-with-context-variable/td-p/34556
+        run: |
+          unset HAS_SECRET
+          if [ -n $SECRET ]; then HAS_SECRET='true' ; fi
+        env:
+          SECRET: "${{ secrets.GITHUB_TOKEN }}"
       - name: Detect which services changed
         id: services_changed
         uses: micro/actions@1.1.1
+        if: ${{ steps.vars.outputs.HAS_SECRET }}
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Started Webhook
+        if: github.ref == 'master'
         run: |
           ./event.sh "build.started" "${GITHUB_RUN_ID}"
       - name: Install Go
@@ -35,17 +49,26 @@ jobs:
           make build
           cd ..
       - name: Build and push docker images
-        run: |          
-          # Login to docker
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} --password-stdin docker.pkg.github.com
-
-          # Build the binaries in the directories which have changed
-          ./build.sh "${{ steps.services_changed.outputs.services_added }}"
-          ./build.sh "${{ steps.services_changed.outputs.services_modified }}"
+        env:
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          BRANCH: ${{ github.ref }}
+        run: |
+          if [ -z "${{ secrets.GITHUB_TOKEN }}" ]; then
+            # Login to docker
+            echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} --password-stdin docker.pkg.github.com
+            
+            # Build the binaries in the directories which have changed
+            ./build.sh "${{ steps.services_changed.outputs.services_added }}"
+            ./build.sh "${{ steps.services_changed.outputs.services_modified }}"
+          else 
+            ./build.sh
+          fi
       - name: Build Finished Webhook
+        if: github.ref == 'master'
         run: |
           ./event.sh "build.finished" "${GITHUB_RUN_ID}"
       - name: Build Failed Webhook
-        if: failure()
+        if: failure() && github.ref == 'master'
         run: |
           ./event.sh "build.failed" "${GITHUB_RUN_ID}"
