getting started in nav

--- a/docs/web/content/_data/sidebars/home_sidebar.yml
+++ b/docs/web/content/_data/sidebars/home_sidebar.yml
@@ -44,7 +44,7 @@ entries:
       url: /resources.html
       output: web, pdf
 
-  - title: Get Started
+  - title: Getting Started
     output: web, pdf
     folderitems:
 
