--- a/kubernetes/service/rbac.yaml
+++ b/kubernetes/service/rbac.yaml
@@ -19,6 +19,8 @@ rules:
   verbs:
   - create
   - delete
+  - update
+  - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
