--- a/docs/web/content/_data/sidebars/home_sidebar.yml
+++ b/docs/web/content/_data/sidebars/home_sidebar.yml
@@ -108,8 +108,8 @@ entries:
       url: /go-api.html
       output: web, pdf
 
-    - title: Internals
-      url: /go-internals.html
+    - title: Interfaces
+      url: /go-interfaces.html
       output: web, pdf
 
     - title: Options
