--- a/.github/workflows/integration-m3o.yml
+++ b/.github/workflows/integration-m3o.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         repository: 'micro/micro'
         path: 'micro'
+        ref: c9a81fcbb742fecab58f3d9a07a83233afbe6c19
 
     - name: Install micro
       working-directory: micro
@@ -52,7 +53,7 @@ jobs:
         MICRO_STRIPE_PLAN_ID: ${{ secrets.MICRO_STRIPE_PLAN_ID }}
         MICRO_EMAIL_FROM: ${{ secrets.MICRO_EMAIL_FROM }}
         MICRO_TEST_ENV: ${{ secrets.MICRO_TEST_ENV }}
-        M3O_STRIPE_SVC: ../../services/payments/provider/stripe
-        M3O_SIGNUP_SVC: ../../services/signup
-        M3O_INVITE_SVC: ../../services/account/invite
+        M3O_STRIPE_SVC: ../../../payments/provider/stripe
+        M3O_SIGNUP_SVC: ../../../signup
+        M3O_INVITE_SVC: ../../../account/invite
         
