--- a/kubernetes/rbac.yaml
+++ b/kubernetes/rbac.yaml
@@ -9,6 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: kubernetes-srv
+  namespace: micro
 rules:
 - apiGroups:
   - ""
