--- a/deployments/analytics.yaml
+++ b/deployments/analytics.yaml
@@ -7,10 +7,10 @@ metadata:
   name: analytics
 spec:
   ports:
-  - name: service-port
-    port: 8080
-    protocol: TCP
-    targetPort: 8080
+    - name: service-port
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
   selector:
     micro: service
     name: analytics
@@ -21,7 +21,7 @@ kind: Deployment
 metadata:
   annotations:
     name: analytics
-    source: github.com/m3o/services/analytics
+    source: github.com/trmnl-core/services/analytics
     version: analytics
   labels:
     micro: service
@@ -38,7 +38,7 @@ spec:
     metadata:
       annotations:
         name: analytics
-        source: github.com/m3o/services/analytics
+        source: github.com/trmnl-core/services/analytics
         version: analytics
       labels:
         micro: service
@@ -46,44 +46,44 @@ spec:
         version: analytics
     spec:
       containers:
-      - env:
-        - name: MICRO_SERVICE_NAME
-          value: analytics
-        - name: MICRO_SERVICE_VERSION
-          value: analytics
-        - name: MICRO_PROXY
-          value: micro-network.default.svc.cluster.local:8443
-        - name: MICRO_SERVICE_ADDRESS
-          value: :8080
-        - name: MICRO_NAMESPACE
-          value: micro
-        - name: MICRO_AUTH_ID
-          valueFrom:
-            secretKeyRef:
-              key: MICRO_AUTH_ID
-              name: analytics-analytics
-              optional: false
-        - name: MICRO_AUTH_SECRET
-          valueFrom:
-            secretKeyRef:
-              key: MICRO_AUTH_SECRET
-              name: analytics-analytics
-              optional: false
-        - name: MICRO_STORE_ADDRESS
-          value: "postgresql://root@cockroachdb-cluster-public:26257/analytics?ssl=true&sslmode=require&sslrootcert=certs/store/ca.crt&sslkey=certs/store/key.pem&sslcert=certs/store/cert.pem"
-        image: ghcr.io/m3o/cells:v3
-        imagePullPolicy: IfNotPresent
-        name: analytics
-        ports:
-        - containerPort: 8080
-          name: service-port
-          protocol: TCP
-        volumeMounts:
-        - name: cockroachdb-client-certs
-          mountPath: "/certs/store"
-          readOnly: true
+        - env:
+            - name: MICRO_SERVICE_NAME
+              value: analytics
+            - name: MICRO_SERVICE_VERSION
+              value: analytics
+            - name: MICRO_PROXY
+              value: micro-network.default.svc.cluster.local:8443
+            - name: MICRO_SERVICE_ADDRESS
+              value: :8080
+            - name: MICRO_NAMESPACE
+              value: micro
+            - name: MICRO_AUTH_ID
+              valueFrom:
+                secretKeyRef:
+                  key: MICRO_AUTH_ID
+                  name: analytics-analytics
+                  optional: false
+            - name: MICRO_AUTH_SECRET
+              valueFrom:
+                secretKeyRef:
+                  key: MICRO_AUTH_SECRET
+                  name: analytics-analytics
+                  optional: false
+            - name: MICRO_STORE_ADDRESS
+              value: "postgresql://root@cockroachdb-cluster-public:26257/analytics?ssl=true&sslmode=require&sslrootcert=certs/store/ca.crt&sslkey=certs/store/key.pem&sslcert=certs/store/cert.pem"
+          image: ghcr.io/trmnl-core/cells:v3
+          imagePullPolicy: IfNotPresent
+          name: analytics
+          ports:
+            - containerPort: 8080
+              name: service-port
+              protocol: TCP
+          volumeMounts:
+            - name: cockroachdb-client-certs
+              mountPath: "/certs/store"
+              readOnly: true
       volumes:
-      - name: cockroachdb-client-certs
-        secret:
-          secretName: cockroachdb-client-certs
-          defaultMode: 0600
+        - name: cockroachdb-client-certs
+          secret:
+            secretName: cockroachdb-client-certs
+            defaultMode: 0600
